@startuml
entity User
entity "journal.csv" as CSVFile {
  _entry: "csv"
  _prompt: csv
  _date: csv
}

class Program {
  _filePath: string
  +menuOptions: list
    1. readEntries
    2. writeEntries
    3. setFilePath
    4. quit
  +Main ()
}

class Journal {
  newPath
  +SetFilePath(_filePath: string, newPath:string)
  +DisplayJournal(_filePath: string)
}

class Prompts {
  +promptList: list<string>
  +_random
  +Prompts()
  +GetRandomPrompt()
}

class Entry {
  _today: DateTime
  entry: string
  currentDate: string
  prompt: string
  +WriteEntry(_filePath: String)
}

User -> Program: Runs Program
Program --> User: Returns Results

Program -> Journal: Read Journal Entries
Program -> Entry: Writes Journal Entries
Program -> Journal: Change Filepath
Journal --> Program: Returns Entries

Entry -> Prompts: Requests Journal Prompts
Prompts --> Entry: Returns Prompt

Entry -> CSVFile: Save New Entries
CSVFile --> Journal: Load Entries

CSVFile -[hidden]-> Prompts
@enduml